--- a/docs/_writings/摘录.md
+++ b/docs/_writings/摘录.md
@@ -5,7 +5,7 @@ author: akara
 tags: 
   - 随笔
 ---
-> 记录
+
 
 他指出现在生活到处充斥着错误的观念，信息。总会在无意间灌输进学生的脑子里，为了保护自己的思想不受侵害，与这种使我们日渐沉默的力量相抗衡，必须要学会阅读来培养自己的意识，建立自己的三观。
 
@@ -36,3 +36,7 @@ tags:
 泣血蝇虫笑苍天，孤帆叠影锁白链。
 
 残月升，骤起烈烈风，尽吹散。
+
+
+
+那一天我二十一岁，在我一生的黄金时代，我有好多奢望。我想爱，想吃，还想在一瞬间变成天上半明半暗的云，后来我才知道，生活就是个缓慢受锤的过程，人一天天老下去，奢望也一天天消逝，最后变得像挨了锤的牛一样。可是我过二十一岁生日时没有预见到这一点。我觉得自己会永远生猛下去，什么也锤不了我。
